stop /your cv/ being covered

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,18 +19,25 @@ html, body {
 
 input {
 	border-radius: 5px;
+	outline-color: grey;
 }
 
 textarea {
 	border-radius: 5px;
 	width: 95%;
+	outline-color: grey;
 }
 
 select {
 	border-radius: 5px;
 }
+
 a {
 	color: #000001;
+}
+
+label {
+	margin-bottom: 20%;
 }
 
 .container {
@@ -51,7 +58,7 @@ a {
 
 .flex-item {
  	height: 3rem;
-
+ 	outline-color: grey;
 	/*
   	padding: 1rem;
   	width: 1rem;
@@ -60,7 +67,8 @@ a {
   	text-align: left;
   	width: 100%;
   	padding-bottom: 10%;
-  	margin-bottom: 5%;
+  	margin-bottom: 0.2rem;
+  	margin-top: 0.2rem;
 }
 
 .flex-item > input {
